@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.14-dev
 
+make sure that if -maxclients option is passed on the command line,
+minclients will never be bigger than that value [Stas]
+
 add -one-process runtime argument, which will start the server
 in single-server mode (httpd -X in Apache 1.X or 
 httpd -D ONE_PROCESS in 2.X) [Geoffrey Young]
